--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+.container {
+  width: 1200px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 header {
   background-color: hsl(217, 28%, 15%);
   display: flex;
