--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,6 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-.container {
-  width: 1200px;
-  max-width: 100%;
-  margin: 0 auto;
-}
 
 header {
   background-color: hsl(217, 28%, 15%);
@@ -27,6 +22,11 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.container {
+  width: 1200px;
+  max-width: 100%;
 }
 
 img {
@@ -57,6 +57,7 @@ img {
 
 .img {
   padding: 20px;
+  text-align: center;
 }
 
 header h1 {
