--- a/css/style.css
+++ b/css/style.css
@@ -57,18 +57,18 @@ img {
 }
 
 .img {
-  padding: 20px;
+  padding: 30px;
   text-align: center;
 }
 
 header h1 {
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   color: hsl(0, 0%, 100%);
 }
 
 header p {
-  padding: 10px 30px;
+  padding: 20px 30px;
   text-align: center;
   color: hsl(0, 0%, 100%);
   margin-bottom: 10px;
@@ -109,3 +109,48 @@ header p {
   margin: 10px 0;
 }
 
+.productive {
+  background-color: hsl(217, 28%, 15%);
+  padding: 40px 0;
+}
+
+.prod-img {
+  padding: 0 30px;
+}
+
+.prod-text {
+  padding: 0 30px;
+  margin-top: 20px;
+  color: hsl(0, 0%, 100%);
+}
+
+.prod-text h3 {
+  margin: 20px 0;
+}
+
+.prod-text p {
+  margin: 20px 0;
+}
+
+.prod-text a {
+  color: hsl(176, 68%, 64%);
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  padding-bottom: 5px;
+  position: relative;
+}
+
+.link::after {
+  content: '';
+  border: 1px solid hsl(176, 68%, 64%);
+  width: 150px;
+  background-color: hsl(176, 68%, 64%);
+  position: absolute;
+  top: 100%;
+  left: 0%;
+}
