--- a/css/style.css
+++ b/css/style.css
@@ -154,3 +154,70 @@ header p {
   top: 100%;
   left: 0%;
 }
+
+.cards {
+  padding: 40px 0;
+  background-color: hsl(217, 28%, 15%);
+}
+
+.cards-info {
+  padding: 0 30px;
+  color: hsl(0, 0%, 100%);
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: hsl(219, 30%, 18%);
+  margin: 20px 0;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.author-info {
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.author-info img {
+  width: 35px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.subscribe {
+  padding: 30px;
+  background-color: hsl(217, 28%, 15%);
+}
+
+.early-access {
+  padding: 20px;
+  border-radius: 10px;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(219, 30%, 18%);
+}
+
+.early-access h2 {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.early-access p {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.email {
+  margin: 20px;
+  padding: 15px 40px;
+  border-radius: 30px;
+  border: none;
+}
