--- a/css/style.css
+++ b/css/style.css
@@ -1,223 +1,223 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 html {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+	font-family: "Raleway", sans-serif;
 }
 
-
 header {
-  background-color: hsl(217, 28%, 15%);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	background-color: hsl(217, 28%, 15%);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .container {
-  width: 1200px;
-  max-width: 100%;
-  margin: 0 auto;
+	width: 1200px;
+	max-width: 100%;
+	margin: 0 auto;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 .logo {
-  width: 20%;
+	width: 20%;
 }
 
 .nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-content: center;
-  padding: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
+	padding: 20px;
 }
 
 .nav-list a {
-  color: hsl(0, 0%, 100%);
-  text-decoration: none;
+	color: hsl(0, 0%, 100%);
+	text-decoration: none;
 }
 
 .nav_a {
-  margin-left: 15px;
-  margin-right: 15px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 .img {
-  padding: 30px;
-  text-align: center;
+	padding: 30px;
+	text-align: center;
 }
 
 header h1 {
-  padding: 20px;
-  text-align: center;
-  color: hsl(0, 0%, 100%);
+	padding: 20px;
+	text-align: center;
+	color: hsl(0, 0%, 100%);
 }
 
 header p {
-  padding: 20px 30px;
-  text-align: center;
-  color: hsl(0, 0%, 100%);
-  margin-bottom: 10px;
+	padding: 20px 30px;
+	text-align: center;
+	color: hsl(0, 0%, 100%);
+	margin-bottom: 10px;
 }
 
 .btn {
-  padding: 15px 70px;
-  border-radius: 30px;
-  border: none;
-  margin-bottom: 20px;
-  font-style: inherit;
-  font-weight: 700;
-  font-size: 15px;
-  color: hsl(0, 0%, 100%);
-  background-color: hsl(198, 60%, 50%);
+	padding: 15px 70px;
+	border-radius: 30px;
+	border: none;
+	margin-bottom: 20px;
+	font-style: inherit;
+	font-weight: 700;
+	font-size: 15px;
+	color: hsl(0, 0%, 100%);
+	background-color: hsl(198, 60%, 50%);
+	outline: none;
+	cursor: pointer;
 }
 
 .info__section {
-  background-color: hsl(217, 28%, 15%);
-  padding: 40px 0;
+	background-color: hsl(217, 28%, 15%);
+	padding: 40px 0;
 }
 
 .info-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .info {
-  padding: 20px 40px;
-  margin: 20px;
-  text-align: center;
-  color: hsl(0, 0%, 100%);
+	padding: 20px 40px;
+	margin: 20px;
+	text-align: center;
+	color: hsl(0, 0%, 100%);
 }
 
 .info h3 {
-  margin: 10px 0;
+	margin: 10px 0;
 }
 
 .productive {
-  background-color: hsl(217, 28%, 15%);
-  padding: 40px 0;
+	background-color: hsl(217, 28%, 15%);
+	padding: 40px 0;
 }
 
 .prod-img {
-  padding: 0 30px;
+	padding: 0 30px;
 }
 
 .prod-text {
-  padding: 0 30px;
-  margin-top: 20px;
-  color: hsl(0, 0%, 100%);
+	padding: 0 30px;
+	margin-top: 20px;
+	color: hsl(0, 0%, 100%);
 }
 
 .prod-text h3 {
-  margin: 20px 0;
+	margin: 20px 0;
 }
 
 .prod-text p {
-  margin: 20px 0;
+	margin: 20px 0;
 }
 
 .prod-text a {
-  color: hsl(176, 68%, 64%);
-  text-decoration: none;
-  margin-right: 10px;
+	color: hsl(176, 68%, 64%);
+	text-decoration: none;
+	margin-right: 10px;
 }
 
 .link {
-  display: flex;
-  align-items: center;
-  padding-bottom: 5px;
-  position: relative;
+	display: flex;
+	align-items: center;
+	padding-bottom: 5px;
+	position: relative;
 }
 
 .link::after {
-  content: '';
-  border: 1px solid hsl(176, 68%, 64%);
-  width: 150px;
-  background-color: hsl(176, 68%, 64%);
-  position: absolute;
-  top: 100%;
-  left: 0%;
+	content: "";
+	border: 1px solid hsl(176, 68%, 64%);
+	width: 150px;
+	background-color: hsl(176, 68%, 64%);
+	position: absolute;
+	top: 100%;
+	left: 0%;
 }
 
 .cards {
-  padding: 40px 0;
-  background-color: hsl(217, 28%, 15%);
+	padding: 40px 0;
+	background-color: hsl(217, 28%, 15%);
 }
 
 .cards-info {
-  padding: 0 30px;
-  color: hsl(0, 0%, 100%);
+	padding: 0 30px;
+	color: hsl(0, 0%, 100%);
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  background-color: hsl(219, 30%, 18%);
-  margin: 20px 0;
-  border-radius: 5px;
-  padding: 20px;
+	display: flex;
+	flex-direction: column;
+	background-color: hsl(219, 30%, 18%);
+	margin: 20px 0;
+	border-radius: 5px;
+	padding: 20px;
 }
 
 .author-info {
-  display: flex;
-  align-items: center;
-  padding-top: 20px;
+	display: flex;
+	align-items: center;
+	padding-top: 20px;
 }
 
 .author-info img {
-  width: 35px;
-  border-radius: 50%;
-  margin-right: 10px;
+	width: 35px;
+	border-radius: 50%;
+	margin-right: 10px;
 }
 
 .subscribe {
-  padding: 30px;
-  background-color: hsl(217, 28%, 15%);
+	padding: 30px;
+	background-color: hsl(217, 28%, 15%);
 }
 
 .early-access {
-  padding: 20px;
-  border-radius: 10px;
-  color: hsl(0, 0%, 100%);
-  background-color: hsl(219, 30%, 18%);
+	padding: 20px;
+	border-radius: 10px;
+	color: hsl(0, 0%, 100%);
+	background-color: hsl(219, 30%, 18%);
 }
 
 .early-access h2 {
-  padding-bottom: 10px;
-  text-align: center;
+	padding-bottom: 10px;
+	text-align: center;
 }
 
 .early-access p {
-  padding-bottom: 10px;
-  text-align: center;
+	padding-bottom: 10px;
+	text-align: center;
 }
 
 .input {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .email {
-  margin: 20px;
-  padding: 15px 40px;
-  border-radius: 30px;
-  border: none;
+	margin: 20px;
+	padding: 15px 40px;
+	border-radius: 30px;
+	border: none;
 }
